:bug: apply monospacing to all child elements of the class
there's a bug in firefox that doesn't actually pass on its inheritence

--- a/index.css
+++ b/index.css
@@ -111,7 +111,12 @@
   line-height: calc(1.8 * var(--unit));
 }
 
-.monospaced {
+/** 
+  Make sure all elements inherit the font-feature-settings
+  Firefox seems to have a bug causing no inheritance at all
+*/
+.monospaced,
+.monospaced * {
   font-feature-settings: "tnum" on;
 }
 
